Implementing Trie solver